Add UseCase9ErrorHandlingValidation with custom exceptions and validation